update pipeline for test cases

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 markers =
     check_class: mark a test as a check_class when checking the class of a variable.
+    e2e_test: marker for e2e test cases
     cleanup: mark a test as cleanup when all test cases executed and want to free resources.
